[package]
name = "ares"
version = "0.1.0"
authors = ["Armin Primadi <aprimadi@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A 2D turn-based tactical game."

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["zgui"]

[dependencies]
derive_more = { version = "0.99", features = ["from"] }
env_logger = "0.9"
log = "0.4"
mq = { package = "macroquad", version = "0.3" }
once_cell = "1.6"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
ui = { path = "zgui", package = "zgui" }

